tests/NormalTests/paczka1/small_fuzzy/10716816.err
Error in line 3: bQk S837 72,1
Error in line 5: bQk A3a6 32,6
Error in line 6: 9Acc7nRFvD S837 17,2
Error in line 4: bQk A306 47,1
